--- a/example_notebooks/example-mouse_brain-spatial.ipynb
+++ b/example_notebooks/example-mouse_brain-spatial.ipynb
@@ -159,7 +159,7 @@
    "outputs": [],
    "source": [
     "#adata_aggr.obsm['X_umap'] = adata.obsm['X_umap']\n",
-    "adata_aggr = st.dynamical_iteration(adata,n_states =8, n_iter = 15, return_aggr_obj=True, weight_connectivities = 0.5,n_components = 21, n_neighbors = 100,thresh_ms_gene = 0.2, use_spatial = True,spa_weight = 0.3, thresh_entropy = 0.05)    \n",
+    "adata_aggr = st.dynamical_iteration(adata,n_states =8, n_iter = 15, return_aggr_obj=True, weight_connectivities = 0.5,n_components = 21, n_neighbors = 100,thresh_ms_gene = 0.2, use_spatial = True,spa_weight = 0.3, thresh_entropy = 0.05, stop_cr = 'rel')    \n",
     "\n",
     "adata_aggr.obs['Region'] = adata.obs['Region'].values\n",
     "sc.pl.embedding(adata, basis=\"xy_loc\", color=\"attractor\")"
@@ -338,9 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "st.plot_tensor(adata, adata_aggr, basis = 'xy_loc', list_attractor = [3,4,5],filter_cells = True, member_thresh = 0.1)"
@@ -550,7 +548,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
