update new data

--- a/example_notebooks/example-mouse_brain_bin.ipynb
+++ b/example_notebooks/example-mouse_brain_bin.ipynb
@@ -800,7 +800,7 @@
     "#import importlib\n",
     "#importlib.reload(st.pl)\n",
     "\n",
-    "st.pl.plot_genes_list(adata, genelist = ['Lrrtm4'], figsize =(10,10) ,ncols =1, wspace = 0.9, hspace = 1,color='membership',attractor=2)\n",
+    "st.pl.plot_genes_list(adata, genelist = ['Lrrtm4'], figsize =(10,10) ,ncols =1, wspace = 0.9, hspace = 1)\n",
     "#plt.savefig('./figures/emt_genes.pdf',dpi = 800,bbox_inches = 'tight')"
    ]
   },
